<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="btn_main_mynano">My Nanodegree Apps!</string>
    <string name="btn_main_popm">Popular Movies</string>
    <string name="btn_main_stockh">Stock Hawk</string>
    <string name="btn_main_buildi">Build it Bigger</string>
    <string name="btn_main_makey">Make Your App</string>
    <string name="btn_main_mat">Material</string>
    <string name="btn_main_gou">Go Ubiquitous</string>
    <string name="btn_main_Capstone">Capstone </string>

</resources>
