<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nano.myappportfolio.MainActivity">

    <!-- Action Bar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- My Nanodegree Apps! -->
    <TextView
        android:id="@+id/btnMyNano"
        style="@style/CustomButtonMain"
        android:background="@android:color/background_light"
        android:text="@string/btn_main_mynano"
        android:textColor="@android:color/background_dark" />

    <!-- All buttons listed in User Interface-->
    <Button
        android:id="@+id/btnPopularMov"
        style="@style/CustomButtonMain"
        android:text="@string/btn_main_popm" />

    <Button
        android:id="@+id/btnBuildIt"
        style="@style/CustomButtonMain"
        android:text="@string/btn_main_buildi" />

    <Button
        android:id="@+id/btnStockH"
        style="@style/CustomButtonMain"
        android:text="@string/btn_main_stockh" />

    <Button
        android:id="@+id/btnMakeYour"
        style="@style/CustomButtonMain"
        android:text="@string/btn_main_makey" />

    <Button
        android:id="@+id/btnMaterial"
        style="@style/CustomButtonMain"
        android:text="@string/btn_main_mat" />

    <Button
        android:id="@+id/btnGoUbi"
        style="@style/CustomButtonMain"
        android:text="@string/btn_main_gou" />

    <Button
        android:id="@+id/btnCapstone"
        style="@style/CustomButtonMain"
        android:text="@string/btn_main_Capstone" />


</LinearLayout>
